# autogen

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.1  ChangeLog.10  ChangeLog.11  ChangeLog.12  ChangeLog.2  ChangeLog.3  ChangeLog.4  ChangeLog.5  ChangeLog.6  ChangeLog.7  ChangeLog.8  ChangeLog.9  INSTALL  MakeRules  Makefile.am  Makefile.am.pre  NEWS  NEWS.pre  NOTES  README  THANKS  TODO-top  VERSION  VERSION.pre  announce.txt  bootstrap  configure.ac  configure.ac.pre  configure.in  description  mkconfig.sh  noag-boot.sh
add-on/: .gitignore  MakeRules  Makefile
add-on/allbut/: Makefile  allbut.c
add-on/autofsm/: Makefile  README  example.def  run.sh
add-on/bits/: .gitignore  Makefile  b-test.def  bit-test.tpl  bits.tpl  build-html.sh
add-on/char-mapper/: .gitignore  Makefile  README  build-html.sh  char-mapper.c  char-mapper.h  cm.tar  map-text.def  mk-opt-table.sh  mk-str2enum.sh  test.sh
add-on/cright-update/: Makefile  collapse.c  collapse.def  cright-update.c  cright.map  opts.def  test.sh
add-on/dispatch/: .gitignore  Makefile  build-html.sh  dispatch.tpl  greek.def  test-all.sh
add-on/mk-fwd/: Makefile  mk-fwd.sh
agen5/: Makefile.am  Makefile.am.pre  ag-text.def  agCgi.c  agDep.c  agInit.c  agShell.c  agUtils.c  agen5.tgz  autogen.c  autogen.h  bootstrap.dir  cgi-fsm.c  cgi.def  defDirect.c  defFind.c  defLex.c  defLoad.c  defParse-fsm.c  defParse.def  defParse.x  directive.tpl  expExtract.c  expFormat.c  expGperf.c  expGuile.c  expMake.c  expOutput.c  expPrint.c  expState.c  expString.c  fmemopen.c  fsm-macro.tlib  fsm-macro.tpl  fsm-trans.tlib  fsm-trans.tpl  fsm.tpl  funcCase.c  funcDef.c  funcEval.c  (+18 more)
agen5/test/: Makefile.am  alist.test  case.test  columns.test  daemon.test  debug.test  define.test  defref.test  directives.test  dynref.test  endmac.test  error.test  expr.test  extract.test  fmemopen.test  for.test  forfrom.test  forin.test  format.test  get.test  gperf.test  heredef.test  html.test  in.test  include.test  leave.test  license.test  line.test  loop.test  make.test  match.test  opts.test  output.test  pseudo.test  reorder.test  return.test  shell.test  snarf.test  stack.test  str2m.test  (+6 more)
autoopts/: .gitignore  Makefile.am  Makefile.am.pre  aginfo-tpl.in  aginfo3-tpl.in  agman-lib.tpl  agman1-tpl.in  agman3-tpl.in  alias.c  ao-strs.def  aoconf-tpl.bstrap  aoconf-tpl.in  aoconf.def  aoconf.tpl  autogen.map  autoopts.c  autoopts.h  autoopts.m4  bits.tpl  boolean.c  bootstrap.dir  check.c  configfile.c  cook.c  enum.c  enumeration.c  env.c  environment.c  file.c  find.c  fix-guile.sh  gen-src.tgz  genshell.def  getopt.tpl  guileopt.c  init.c  install-hook.sh  install-options-h  load.c  makeshell.c  (+32 more)
autoopts/test/: Makefile.am  alias.test  argument.test  cfg-edit.test  cond.test  config.test  defs.in  doc.test  enums.test  equiv.test  errors.test  getopt.test  guile.test  handler.test  immediate.test  keyword.test  library.test  main.test  nested.test  nls.test  rc.test  shell.test  stdopts.def  stdopts.test  time.test  usage.test  vendor.test  vers.test
autoopts/tpl/: Mdoc.pm  aginfo.tpl  aginfo.tpl.in  aginfo3.tpl  aginfo3.tpl.in  aginfodoc.tpl  agman-cmd.tpl  agman-file.tpl  agman-lib.tpl  agman-mdoc-cmd.tpl  agman.tlib  agman1.tpl  agman1.tpl.in  agman3.tpl  agman3.tpl.in  agman5.tpl  agman8.tpl  agmdoc-cmd.tpl  agmdoc-file.tpl  agmdoc5.tpl  agmdoc8.tpl  agpl.lic  agtexi-cmd.tpl  agtexi-file.tpl  aoconf.tpl  bits.tpl  cmd-doc.tlib  def2pot.tpl  getopt.tpl  gpl.lic  gplv2.lic  lgpl.lic  man2mdoc.pl  man2texi.sh  mbsd.lic  mdoc2man.pl  mdoc2man.sh  mdoc2texi.pl  optcode.tlib  optcode.tpl  (+23 more)
columns/: Makefile.am  bootstrap.dir  columns-opts.tgz  columns.c  opts.def
compat/: Makefile.am  bootstrap.dir  compat.h  pathfind.c  snprintf.c  strdup.c  strftime.c  strsignal.c  strsignal.def  strsignal.tpl  unlocked-io.h  windows-config.h
config/: .gitignore  bootstrap  bootstrap.local  bootstrap.shlib  confmacs.tlib  confmacs.tpl  conftest.tpl  extensions.m4  gen-list.txt  libopts.def  liboptschk.m4  m4.tgz  misc.def  missing  mk-shdefs.in  unlocked-io.m4
config/snippet/: .gitignore
doc/: .gitignore  Makefile.am  auto-opts.tlib  auto-opts.tpl  auto_gen-tpl.in  auto_gen.tpl  autogen-intro.texi  autogen-texi.txt  bitmaps.texi  fdl.texi  mk-agen-texi-in  mk-agen-texi.sh  snprintfv.menu  snprintfv.texi
getdefs/: Makefile.am  bootstrap.dir  gdemit.c  gdinit.c  getdefs.c  getdefs.h  opts.def
getdefs/test/: Makefile.am  cfg.test  defs  index.test  option.test  subblock.test
pkg/: Makefile.am  Makefile.am.pre  gnudir.tpl  gnudoc.tpl  lsm.tpl  mkgnudoc.sh  mkpkg.debian  mkpkg.linux  mkpkg.sh  mkpkg.sun  pkg-env.in  spec.tpl
pkg/debian/: Makefile  README.Debian  autogen.doc-base  autogen.files  autogen.manpages  changelog  control  libopts25-dev.files  rules  watch
pkg/libopts/: COPYING.gplv3  COPYING.lgplv3  README  libopts-add.m4  mklibsrc.sh
snprintfv/: AUTHORS  Makefile.am  README  bootstrap.dir  compat.h  custom.c  filament.c  filament.in  format.c  gendoc.awk  genproto  mem.c  mem.h  printf.c  printf.in  snprintfv.m4  stream.c  stream.in
xml2ag/: Makefile.am  fork.tpl  xml2ag.c  xmlopts.def
xml2ag/test/: Makefile.am  convert.test
